--- a/views/schedule.pug
+++ b/views/schedule.pug
@@ -36,7 +36,7 @@ append content
                             p
                                 label.form-label(for='exampleFormControlInput1') Location / Address
                                 input.form-control.form-control-lg#address(type='text' name='address' placeholder='1234 Relax Ln, Scottsdale, AZ 85200' onblur='validate(5)')
-                        .form-group.col-sm-8
+                        .form-group.col-sm-8#marker
                             p
                                 button.btn.btn-secondary.m-2(type='button' data-bs-dismiss='modal') Cancel
                                 button.btn.btn-primary.m-2(type='submit') Purchase
@@ -94,7 +94,7 @@ append content
                                         span.card-text.select-values
                                     .col.col-2.col-md-1.m-0.pe-3
                                         .form-check.checkbox-lg.text-right
-                                            input#flexCheckIndeterminate.form-check-input(type='checkbox' value='')
+                                            input.form-check-input(type='checkbox' value='')
                     .col
                         .card
                             .card-body
@@ -128,7 +128,7 @@ append content
                                         span.card-text.select-values
                                     .col.col-2.col-md-1.m-0.pe-3
                                         .form-check.checkbox-lg.text-center
-                                            input#flexCheckIndeterminate.form-check-input(type='checkbox' value='') 
+                                            input.form-check-input(type='checkbox' value='') 
                     .col
                         .card
                             .card-body
@@ -162,7 +162,7 @@ append content
                                         span.card-text.select-values
                                     .col.col-2.col-md-1.m-0.pe-3
                                         .form-check.checkbox-lg.text-center
-                                            input#flexCheckIndeterminate.form-check-input(type='checkbox' value='')
+                                            input.form-check-input(type='checkbox' value='')
                     .col
                         .card
                             .card-body
@@ -196,7 +196,7 @@ append content
                                         span.card-text.select-values
                                     .col.col-2.col-md-1.m-0.pe-3
                                         .form-check.checkbox-lg.text-center
-                                            input#flexCheckIndeterminate.form-check-input(type='checkbox' value='')
+                                            input.form-check-input(type='checkbox' value='')
                     .col
                         .card
                             .card-body
@@ -230,7 +230,7 @@ append content
                                         span.card-text.select-values
                                     .col.col-2.col-md-1.m-0.pe-3
                                         .form-check.checkbox-lg.text-center
-                                            input#flexCheckIndeterminate.form-check-input(type='checkbox' value='')
+                                            input.form-check-input(type='checkbox' value='')
                     .col
                         .card
                             .card-body
@@ -264,7 +264,7 @@ append content
                                         span.card-text.select-values
                                     .col.col-2.col-md-1.m-0.pe-3
                                         .form-check.checkbox-lg.text-center
-                                            input#flexCheckIndeterminate.form-check-input(type='checkbox' value='')
+                                            input.form-check-input(type='checkbox' value='')
             #cosSer.container-fluid.container-service.pb-5.align-items-center.justify-content-center.tab-pane.fade(role='tabpanel' aria-labelledby='cosSer-tab')
                 h2.text-center.pb-0 Skin & Cosmetic Treatments
                 .row.row-cols-1.row-cols-md-2.g-4.mx-3
@@ -301,7 +301,7 @@ append content
                                         span.card-text.select-values
                                     .col.col-2.col-md-1.m-0.pe-3
                                         .form-check.checkbox-lg.text-center
-                                            input#flexCheckIndeterminate.form-check-input(type='checkbox' value='')
+                                            input.form-check-input(type='checkbox' value='')
                     .col
                         .card
                             .card-body
@@ -335,7 +335,7 @@ append content
                                         span.card-text.select-values
                                     .col.col-2.col-md-1.m-0.pe-3
                                         .form-check.checkbox-lg.text-center
-                                            input#flexCheckIndeterminate.form-check-input(type='checkbox' value='')
+                                            input.form-check-input(type='checkbox' value='')
                     .col
                         .card
                             .card-body
@@ -369,7 +369,7 @@ append content
                                         span.card-text.select-values
                                     .col.col-2.col-md-1.m-0.pe-3
                                         .form-check.checkbox-lg.text-center
-                                            input#flexCheckIndeterminate.form-check-input(type='checkbox' value='')
+                                            input.form-check-input(type='checkbox' value='')
                     .col
                         .card
                             .card-body
@@ -403,7 +403,7 @@ append content
                                         span.card-text.select-values
                                     .col.col-2.col-md-1.m-0.pe-3
                                         .form-check.checkbox-lg.text-center
-                                            input#flexCheckIndeterminate.form-check-input(type='checkbox' value='')
+                                            input.form-check-input(type='checkbox' value='')
                     .col
                         .card
                             .card-body
@@ -437,7 +437,7 @@ append content
                                         span.card-text.select-values
                                     .col.col-2.col-md-1.m-0.pe-3
                                         .form-check.checkbox-lg.text-right
-                                            input#flexCheckIndeterminate.form-check-input(type='checkbox' value='')
+                                            input.form-check-input(type='checkbox' value='')
                     .col
                         .card
                             .card-body
@@ -471,7 +471,7 @@ append content
                                         span.card-text.select-values
                                     .col.col-2.col-md-1.m-0.pe-3
                                         .form-check.checkbox-lg.text-center
-                                            input#flexCheckIndeterminate.form-check-input(type='checkbox' value='') 
+                                            input.form-check-input(type='checkbox' value='') 
                     .col
                         .card
                             .card-body
@@ -505,7 +505,7 @@ append content
                                         span.card-text.select-values
                                     .col.col-2.col-md-1.m-0.pe-3
                                         .form-check.checkbox-lg.text-center
-                                            input#flexCheckIndeterminate.form-check-input(type='checkbox' value='')
+                                            input.form-check-input(type='checkbox' value='')
                     .col
                         .card
                             .card-body
@@ -539,7 +539,7 @@ append content
                                         span.card-text.select-values
                                     .col.col-2.col-md-1.m-0.pe-3
                                         .form-check.checkbox-lg.text-center
-                                            input#flexCheckIndeterminate.form-check-input(type='checkbox' value='')
+                                            input.form-check-input(type='checkbox' value='')
                     .col
                         .card
                             .card-body
@@ -573,7 +573,7 @@ append content
                                         span.card-text.select-values
                                     .col.col-2.col-md-1.m-0.pe-3
                                         .form-check.checkbox-lg.text-center
-                                            input#flexCheckIndeterminate.form-check-input(type='checkbox' value='')
+                                            input.form-check-input(type='checkbox' value='')
                     .col
                         .card
                             .card-body
@@ -607,7 +607,7 @@ append content
                                         span.card-text.select-values
                                     .col.col-2.col-md-1.m-0.pe-3
                                         .form-check.checkbox-lg.text-center
-                                            input#flexCheckIndeterminate.form-check-input(type='checkbox' value='')
+                                            input.form-check-input(type='checkbox' value='')
             #addSer.container-fluid.container-service.pb-5.align-items-center.justify-content-center.tab-pane.fade(role='tabpanel' aria-labelledby='addSer-tab')
                 h2.text-center.pb-0 Additional Therapies
                 .row.row-cols-1.row-cols-md-2.g-4.mx-3     
@@ -644,7 +644,7 @@ append content
                                         span.card-text.select-values
                                     .col.col-2.col-md-1.m-0.pe-3
                                         .form-check.checkbox-lg.text-right
-                                            input#flexCheckIndeterminate.form-check-input(type='checkbox' value='')
+                                            input.form-check-input(type='checkbox' value='')
                     .col
                         .card
                             .card-body
@@ -687,7 +687,7 @@ append content
                                         span.card-text.select-values
                                     .col.col-2.col-md-1.m-0.pe-3
                                         .form-check.checkbox-lg.text-right
-                                            input#flexCheckIndeterminate.form-check-input(type='checkbox' value='')
+                                            input.form-check-input(type='checkbox' value='')
                     .col
                         .card
                             .card-body
@@ -721,7 +721,7 @@ append content
                                         span.card-text.select-values
                                     .col.col-2.col-md-1.m-0.pe-3
                                         .form-check.checkbox-lg.text-right
-                                            input#flexCheckIndeterminate.form-check-input(type='checkbox' value='')
+                                            input.form-check-input(type='checkbox' value='')
                     .col
                         .card
                             .card-body
@@ -755,17 +755,31 @@ append content
                                         span.card-text.select-values
                                     .col.col-2.col-md-1.m-0.pe-3
                                         .form-check.checkbox-lg.text-right
-                                            input#flexCheckIndeterminate.form-check-input(type='checkbox' value='')
+                                            input.form-check-input(type='checkbox' value='')
         .container-fluid.pb-2.align-items-center.justify-content-center
             .row.row-service.mb-1.d-flex.align-items-center.justify-content-center
                 .col.d-flex.align-items-center.justify-content-center
-                    .card.w-25
-                        .card-body.text-center
-                            h4.card-title Appointment Details 
-                            p.card-text.tally
-                                span#appt-dur 
-                                span#subtotal
-                            p.card-text
+                    .card.w-50
+                        #serviceList.card-body
+                            h4#serviceTitles.card-title.text-center Appointment Details
+                            p.card-text.text-center
+                                table.table#table-cart
+                                    thead
+                                        tr
+                                            th(scope="col") Item #
+                                            th(scope="col") Services
+                                            th(scope="col") Appt Duration
+                                            th(scope="col") Item Cost
+                                    tbody
+                                        tr
+                                            td
+                                            td 
+                                            td 
+                                            td
+                            //- p.card-text.tally.text-end
+                            //-     span#appt-dur 
+                            //-     span#subtotal
+                            p.card-text.text-center
                                 button.btn.btn-warning.w-25(type='button' data-bs-toggle='modal' data-bs-target='#staticBackdrop')
                                     | Continue!
     include foot
