--- a/views/schedule.pug
+++ b/views/schedule.pug
@@ -30,12 +30,12 @@ append content
                         .form-group.col-sm-8.flex-column.d-flex 
                             p
                                 label.form-label(for='exampleFormControlInput1') Phone Number
-                                input.form-control.form-control-lg#phone(type='text' name='phone' placeholder='123-456-7890' onblur='validate(4)')
+                                input.form-control.form-control-lg#phone(type='text' name='phone' placeholder='Enter Phone #' onblur='validate(4)')
                             //- .row.justify-content-between.text-left
                         .form-group.col-sm-8.flex-column.d-flex
                             p
                                 label.form-label(for='exampleFormControlInput1') Location / Address
-                                input.form-control.form-control-lg#address(type='text' name='address' placeholder='1234 Relax Ln, Scottsdale, AZ 85200' onblur='validate(5)')
+                                input.form-control.form-control-lg#address(type='text' name='address' placeholder='Location For Services' onblur='validate(5)')
                         .form-group.col-sm-8#marker
                             p
                                 button.btn.btn-secondary.m-2(type='button' data-bs-dismiss='modal') Cancel
