color theme change

--- a/views/foot.pug
+++ b/views/foot.pug
@@ -11,6 +11,9 @@ block foot
               a(href='emailto: goddessofthesunmobile@gmail.com')
                 i.fa-solid.fa-envelope &nbsp; Email
             li
+              a(href="text:602-420-3340") 
+                i.fa-solid.fa-phone &nbsp; 602-420-3340
+            li
               a(href="tel:602-420-3340") 
                 i.fa-solid.fa-phone &nbsp; 602-420-3340
         .col.d-flex.align-items-center.justify-content-center
