--- a/views/index.pug
+++ b/views/index.pug
@@ -104,7 +104,7 @@ append content
                 .card.w-75.catusCd.text-center
                     img.card-img-top(src='images/pelvic_card.jpeg' alt='pelvic')
                     .card-body.d-flex.flex-column
-                        h5.card-title Pelvic Floor Disorders & Massage
+                        h5.card-title Pelvic Floor Disorder Massage
                         p.card-text Pelvic floor disorders encompass a range of challenges affecting essential internal organs. This therapy restores both strength and structure.
                         a.btn.btn-dark.mt-auto.actNow#pelvicBtn(href='#') Learn More
     .blank
