--- a/views/schedule.pug
+++ b/views/schedule.pug
@@ -69,7 +69,7 @@ append content
                     .col
                         .card
                             .card-body
-                                h4.card-title Reiki Session &nbsp;&nbsp;&nbsp;
+                                h4.card-title Mobile Reiki Session &nbsp;&nbsp;&nbsp;
                                     a.select-values.more-info(href='' data-bs-toggle="modal" data-bs-target="#infoModal" prop='#reiki-session') More Info
                                 .row.align-items-center.row-cols-2
                                     .col.col-10.col-md-11
@@ -101,7 +101,7 @@ append content
                     .col
                         .card
                             .card-body
-                                h4.card-title Swedish Massage &nbsp;&nbsp;&nbsp;
+                                h4.card-title Mobile Swedish Massage &nbsp;&nbsp;&nbsp;
                                      a.select-values.more-info(href='' data-bs-toggle="modal" data-bs-target="#infoModal" prop='#swedish') More Info
                                 .row.align-items-center.row-cols-2
                                     .col.col-10.col-md-11
@@ -133,7 +133,7 @@ append content
                     .col
                         .card
                             .card-body
-                                h4.card-title Deep-Tissue Massage &nbsp;&nbsp;&nbsp;
+                                h4.card-title Mobile Deep-Tissue Massage &nbsp;&nbsp;&nbsp;
                                     a.select-values.more-info(href='' data-bs-toggle="modal" data-bs-target="#infoModal" prop='#deep-tissue ') More Info
                                 .row.align-items-center.row-cols-2
                                     .col.col-10.col-md-11
@@ -165,7 +165,7 @@ append content
                     .col
                         .card
                             .card-body
-                                h4.card-title Prenatal Massage &nbsp;&nbsp;&nbsp;
+                                h4.card-title Mobile Prenatal Massage &nbsp;&nbsp;&nbsp;
                                      a.select-values.more-info(href='' data-bs-toggle="modal" data-bs-target="#infoModal" prop='#prenatal ') More Info
                                 .row.align-items-center.row-cols-2
                                     .col.col-10.col-md-11
@@ -200,7 +200,7 @@ append content
                     .col
                         .card
                             .card-body
-                                h4.card-title Remote Reiki Sound Session &nbsp;&nbsp;&nbsp;
+                                h4.card-title Mobile Remote Reiki Sound Session &nbsp;&nbsp;&nbsp;
                                     a.select-values.more-info(href='' data-bs-toggle="modal" data-bs-target="#infoModal" prop='#reiki-sound') More Info
                                 .row.align-items-center.row-cols-2
                                     .col.col-10.col-md-11
@@ -232,7 +232,7 @@ append content
                     .col
                         .card
                             .card-body
-                                h4.card-title Reiki Lash, Lift,and Tint &nbsp;&nbsp;&nbsp;
+                                h4.card-title Mobile Reiki Lash, Lift,and Tint &nbsp;&nbsp;&nbsp;
                                     a.select-values.more-info(href='' data-bs-toggle="modal" data-bs-target="#infoModal" prop='#reiki-llt') More Info
                                 .row.align-items-center.row-cols-2
                                     .col.col-10.col-md-11
@@ -264,7 +264,7 @@ append content
                     .col
                         .card
                             .card-body
-                                h4.card-title Reiki Lash & Lift &nbsp;&nbsp;&nbsp;
+                                h4.card-title Mobile Reiki Lash & Lift &nbsp;&nbsp;&nbsp;
                                     a.select-values.more-info(href='' data-bs-toggle="modal" data-bs-target="#infoModal" prop='#reiki-ll') More Info
                                 .row.align-items-center.row-cols-2
                                     .col.col-10.col-md-11
@@ -299,7 +299,7 @@ append content
                     .col
                         .card
                             .card-body
-                                h4.card-title Reiki House or Business Clearing &nbsp;&nbsp;&nbsp;
+                                h4.card-title Mobile Reiki House or Business Clearing &nbsp;&nbsp;&nbsp;
                                     a.select-values.more-info(href='' data-bs-toggle="modal" data-bs-target="#infoModal" prop='#reiki-hbc') More Info
                                 .row.align-items-center.row-cols-2
                                     .col.col-10.col-md-11
@@ -331,7 +331,7 @@ append content
                     .col
                         .card
                             .card-body
-                                h4.card-title Reiki Pet Session &nbsp;&nbsp;&nbsp;
+                                h4.card-title Mobile Reiki Pet Session &nbsp;&nbsp;&nbsp;
                                     a.select-values.more-info(href='' data-bs-toggle="modal" data-bs-target="#infoModal" prop='#reiki-pets') More Info
                                 .row.align-items-center.row-cols-2
                                     .col.col-10.col-md-11
