--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -190,7 +190,8 @@ p {
 .other {
   width: 100%;
   min-height: 20vh;
-  background-color: var(--color);
+  background-color: black;
+  /* background-color: var(--color); */
 }
 
 .blank4,
@@ -236,24 +237,24 @@ p {
   min-height: 50%;
 }
 .catusCd{
-  background-color: #5B6F55;
-  color: white;
+  background-color: goldenrod;
+  color: black;
 }
 
 .navbar{
-  background-color: #f7f2df;
-  background-image: url("/images/sunset_nav.png"), linear-gradient(#fa6520, #f5d467, #ebddad, #f7f2df);
+  background-color: goldenrod;
+  /* background-image: url("/images/sunset_nav.png"), linear-gradient(#fa6520, #f5d467, #ebddad, #f7f2df); */
   /* background-image: url("/images/sunset_nav.png"); */
   background-size: cover;
   /* min-height: 100%; */
   height: 100px;
   font-size: 18px;
-  /* color: orange; */
+  color: black;
 }
 
 #collapsibleNavbar > ul > li > a{
-  color: #eb5a29;
-  text-shadow: 2px 1px 2px #993333;
+  color: black;
+  text-shadow: 2px 1px 2px grey;
   font-size: 20px;
 }
 /* 
@@ -306,43 +307,50 @@ p {
   height: 100px; /* fixed header height*/
   margin: -100px 0 0; /* negative fixed header height */
 }
-/* 
+ 
 footer{
-  color: white;
-  background-color: #5B6F55;
-} */
+  /* color: white; */
+  background-color: goldenrod;
+}
 
 .sixth{
-  color: #e6ffff;
-  background-color: #5B6F55;
+  color: black;
+  text-shadow: 2px 1px 2px grey;
+  background-color: goldenrod;
   height: 100px;
   margin: 0;
   padding: 0;
   font-size: 18px;
 }
 .ftRow{
-  background-color: #5B6F55;
+  background-color: goldenrod;
+  color: black;
 }
 footer,
 a:link{
-  color: #e6ffff; 
+  color: black;
+  text-shadow: 2px 1px 2px grey;
 }
 footer,
 a:visited{
-  color: #e6ffff; 
+  color: black;
+  text-shadow: 2px 1px 2px grey;
 }
 footer,
 a:hover{
-  color: #e6ffff; 
+  color: black;
+  text-shadow: 2px 1px 2px grey;
 }
 footer,
 a:active{
-  color: #e6ffff; 
+  color: black;
+  text-shadow: 2px 1px 2px grey;
 }
 
 footer,
 h3{
-  color: white;
+  color: black;
+  text-shadow: 2px 1px 2px grey;
 }
 .nobull {
   list-style-type: none;
