--- a/views/foot.pug
+++ b/views/foot.pug
@@ -4,35 +4,27 @@ block foot
     .blank6
     .container-fluid.sixth
       .row.justify-content-center.ftRow#contact
-        .col.d-flex.align-items-center.justify-content-center
-          h3 Contact Me
+        .col.d-flex.align-items-center.justify-content-center.mt-2
+          h4 Contact Me
           ul.nobull(style='list-style: none;')
-            li
+            li.m-2
               a(href='emailto: goddessofthesunmobile@gmail.com')
                 i.fa-solid.fa-envelope &nbsp; Email
-            li
+            li.m-2
               a(href="text:602-420-3340") 
-                i.fa-solid.fa-phone &nbsp; 602-420-3340
-            li
+                i.fa-solid.fa-message &nbsp; Text
+            li.m-2
               a(href="tel:602-420-3340") 
-                i.fa-solid.fa-phone &nbsp; 602-420-3340
+                i.fa-solid.fa-phone &nbsp; Call
         .col.d-flex.align-items-center.justify-content-center
           .row.justify-content-center.ftRow
-          h3 Follow Me
+          h4 Follow Me
             .row.justify-content-center
               .col
                 a(href='#')
-                  i.fa-brands.fa-facebook
-              .col
-                a(href='#')
-                  i.fa-brands.fa-x-twitter
-                  //- a(href='#')
-                //-   i.icon.ion-social-snapchati
-                //- a(href='#')
-              .col
-                a(href='#')
                   i.fa-brands.fa-instagram
-      .row.d-flex.align-items-center.justify-content-center.ftRow
+        //- .row.d-flex.align-items-center.justify-content-center.ftRow
+        br
         p.text-center.copyright Goddess Of The Sun, LLC &copy; 2018
 
 
