--- a/views/index.pug
+++ b/views/index.pug
@@ -29,60 +29,60 @@ append content
 
     .blank
     .container-fluid.third.pb-4#services
-        .row.align-items-center.g-4
-            h2.w-100.mt-5.text-center The Services I Provide
-            .col.d-flex.align-items-center.justify-content-center
-                table.table.w-75.text-center.fadein
-                    thead
-                        tr
-                            th Massage Therapy
-                            th Skin & Cosmetic Treatments
-                            th Additional Therapies
-                    tbody
-                        tr
-                            td Swedish Massage
-                            td Levitate Facial
-                            td Aromatherapy - Eucalyptus
-                        tr
-                            td Deep Tissue Therapy
-                            td Express Facial
-                            td Aromatherapy - Lavender
-                        tr
-                            td Makai Lomi Lomi Massage
-                            td Brazilian Wax (women and men)
-                            td Aromatherapy - Peppermint
-                        tr
-                            td Prenatal Massage
-                            td Brow Tint
-                            td Cupping Therapy
-                        tr
-                            td Reflexology
-                            td Lash Tint
-                            td Sound Healthing
-                        tr
-                            td Pelvic Floor Disorder
-                            td Lash Lift
-                            td Back Treatments 
-                        tr 
-                            td 
-                            td Acne Treatments 
-                            td 
-                        tr 
-                            td 
-                            td Body Wraps
-                            td 
-                        tr 
-                            td 
-                            td Anti-aging Treatments
-                            td 
-                        tr 
-                            td 
-                            td Body Scrubs
-                            td  
-                        tr 
-                            td 
-                            td Eye Treatments
-                            td    
+        //- .row.align-items-center.g-4
+            //- h2.w-100.mt-5.text-center The Services I Provide
+            //- .col.d-flex.align-items-center.justify-content-center
+                //- table.table.w-75.text-center.fadein
+                //-     thead
+                //-         tr
+                //-             th Massage Therapy
+                //-             th Skin & Cosmetic Treatments
+                //-             th Additional Therapies
+                //-     tbody
+                //-         tr
+                //-             td Swedish Massage
+                //-             td Levitate Facial
+                //-             td Aromatherapy - Eucalyptus
+                //-         tr
+                //-             td Deep Tissue Therapy
+                //-             td Express Facial
+                //-             td Aromatherapy - Lavender
+                //-         tr
+                //-             td Makai Lomi Lomi Massage
+                //-             td Brazilian Wax (women and men)
+                //-             td Aromatherapy - Peppermint
+                //-         tr
+                //-             td Prenatal Massage
+                //-             td Brow Tint
+                //-             td Cupping Therapy
+                //-         tr
+                //-             td Reflexology
+                //-             td Lash Tint
+                //-             td Sound Healthing
+                //-         tr
+                //-             td Pelvic Floor Disorder
+                //-             td Lash Lift
+                //-             td Back Treatments 
+                //-         tr 
+                //-             td 
+                //-             td Acne Treatments 
+                //-             td 
+                //-         tr 
+                //-             td 
+                //-             td Body Wraps
+                //-             td 
+                //-         tr 
+                //-             td 
+                //-             td Anti-aging Treatments
+                //-             td 
+                //-         tr 
+                //-             td 
+                //-             td Body Scrubs
+                //-             td  
+                //-         tr 
+                //-             td 
+                //-             td Eye Treatments
+                //-             td    
 
         .row.align-items-center.row-cols-1.row-cols-md-2.row-cols-lg-3.g-4.fadein
             h2.w-100.mt-5.text-center Theraputic Specialities
@@ -107,7 +107,7 @@ append content
                         h5.card-title Pelvic Floor Disorder Massage
                         p.card-text Pelvic floor disorders encompass a range of challenges affecting essential internal organs. This therapy restores both strength and structure.
                         a.btn.btn-dark.mt-auto.actNow#pelvicBtn(href='#') Learn More
-    .blank
+    .blank2
     .container-fluid.fourth.w-100.pb-4#thInfo
     .blank4
     .container-fluid.fifth.pb-4#reviews
