--- a/views/index.pug
+++ b/views/index.pug
@@ -11,7 +11,7 @@ append content
             .col.left_col.d-flex.align-items-center.justify-content-center.p-0.m-0
                 .card#logoCard.fadein
                     .card-body
-                        img.p-0.m-0(src='images/GOTSMT.png' alt='AirPlay' style='width:350px; height:200px;')
+                        img.p-0.m-0(src='images/gos_logo_temp.jpg' alt='AirPlay' style='width:350px; height:200px;')
             .col.right_col.d-flex.align-items-center.justify-content-center.p-0.m-0#AboutItAll
                 .card.w-75#aboutCarol.fadein
                     .card-body
