--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -190,7 +190,9 @@ p {
   width: 100%;
   min-height: 30vh;
   /* background-color: black; */
-  background-color: var(--color);
+  /* background-color: var(--color); */
+  background-color: goldenrod;
+  background-image: url("/images/gold-bk.avif"), linear-gradient(#ae9110, #cba21c, #eacb65);
 }
 
 .blank2,
@@ -198,14 +200,18 @@ p {
   width: 100%;
   min-height: 20vh;
   /* background-color: black; */
-  background-color: var(--color);
+  /* background-color: var(--color); */
+  background-color: goldenrod;
+  background-image: url("/images/gold-bk.avif"), linear-gradient(#ae9110, #cba21c, #eacb65);
 }
 
 .blank4,
 .other {
   width: 100%;
   min-height: 20vh;
-  background-color: var(--color);
+  /* background-color: var(--color); */
+  background-color: goldenrod;
+  background-image: url("/images/gold-bk.avif"), linear-gradient(#ae9110, #cba21c, #eacb65);
 }
 
 .blank6,
@@ -213,6 +219,8 @@ p {
   width: 100%;
   min-height: 15vh;
   background-color: var(--color);
+  /* background-color: goldenrod;
+  background-image: url("/images/gold-bk.avif"), linear-gradient(#ae9110, #cba21c, #eacb65); */
 }
 
 .massInfo{
@@ -250,19 +258,20 @@ p {
 }
 
 .navbar{
-  background-color: goldenrod;
-  background-image: url("/images/gold-bk.avif"), linear-gradient(#ae9110, #cba21c, #eacb65);
+  /* background-color: goldenrod; */
+  /* background-image: url("/images/gold-bk.avif"), linear-gradient(#ae9110, #cba21c, #eacb65); */
   /* background-image: url("/images/sunset_nav.png"), linear-gradient(#fa6520, #f5d467, #ebddad, #f7f2df); */
   /* background-image: url("/images/sunset_nav.png"); */
+  background-color: black;
   background-size: cover;
   /* min-height: 100%; */
   height: 100px;
   font-size: 18px;
-  color: black;
+  color: goldenrod;
 }
 
 #collapsibleNavbar > ul > li > a{
-  color: black;
+  color: goldenrod;
   text-shadow: 2px 1px 2px grey;
   font-size: 20px;
 }
@@ -332,7 +341,7 @@ footer{
   height: 80px;
   margin: 0;
   padding: 0;
-  font-size: 12px;
+  font-size: 16px;
 }
 .ftRow{
   background-color: goldenrod;
