link fix instagram

--- a/views/foot.pug
+++ b/views/foot.pug
@@ -18,11 +18,12 @@ block foot
                 i.fa-solid.fa-phone &nbsp; Call
         .col.d-flex.align-items-center.justify-content-center
           .row.justify-content-center.ftRow
-          h4 Follow Me
-            .row.justify-content-center
-              .col
-                a(href='#')
-                  i.fa-brands.fa-instagram
+          h4 
+            a(href='#' style="font-family:Lucida Grande;") Follow Me &nbsp;
+              i.fa-brands.fa-instagram
+            //- .row.justify-content-center
+              //- a(href='#')
+              //-   i.fa-brands.fa-instagram
         //- .row.d-flex.align-items-center.justify-content-center.ftRow
         br
         p.text-center.copyright Goddess Of The Sun, LLC &copy; 2018
