some text and images

--- a/views/services.pug
+++ b/views/services.pug
@@ -1,9 +1,9 @@
 #reiki-session
     | Receive a Reiki session in the comfort of your home or as you go about your day. At the scheduled time you may dedicate time out to lay down to receive healing. 
-    | Reiki is an ancient Japanese stress reduction and relaxation technique that helps lead to healing and well-being. Healing from the inside out Mind, Body & Spirit!
+    | Reiki is an ancient Japanese stress reduction and relaxation technique that helps lead to healing and well-being. Healing from the inside out Spirt, Mind, & Body!
 
 #reiki-sound 
-    | A Reiki Session combined with intuitive sound healing techniques. A singing bowl tuned to healing frequency played for healing different parts of the body, mind and spirit. 
+    | A Reiki Session combined with intuitive sound healing techniques. A singing bowl tuned to healing frequency played for healing different parts of the Spirt, Mind, & Body. 
     | Helps to stimulate circulation to allow muscle relaxation and improve lymphatic flow, reducing stress and promoting relaxation. 
     | *NOTE: Sound healing can be contraindicated when the recipient has a pacemaker, metal rods inside of the body or has seizure disorder. 
     | Please let your practitioner know if you have any of these health concerns and they will tailor the session to meet your needs.
@@ -11,11 +11,11 @@
 #reiki-llt 
     | Reiki Infused Lash Lift & Tint. A lash lift & tint combined with Reiki energy healing. 
     | Reiki is an ancient Japanese stress reduction and relaxation technique that helps lead to healing and well-being. 
-    | Healing Mind, Body & Spirit from the inside out. Appointment Accepted upon Confirmation of Deposit
+    | Healing Spirt, Mind, & Body from the inside out. Appointment Accepted upon Confirmation of Deposit
 
 #reiki-ll 
     | Reiki Infused Lash Lift. A lash lift combined with Reiki energy healing. Reiki is an ancient Japanese stress reduction and relaxation technique that helps lead to healing and well-being. 
-    | Healing from the inside out Mind, Body & Spirit
+    | Healing from the inside out Spirt, Mind, & Body.
 
 #reiki-hbc 
     | Have you experienced negativity, illness, a transition, moved into a new home or space? Rid, cleanse and clear your own spaces or of others negative energy in homes, 
@@ -25,10 +25,10 @@
     | Reiki is an ancient Japanese stress reduction and relaxation technique that helps lead to healing and well being for your Fur babies too!
 
 #reiki-eh 
-    | Reiki is an ancient Japanese stress reduction and relaxation technique that helps lead to healing and well-being. Healing from the inside out, Mind, Body & Spirit
+    | Reiki is an ancient Japanese stress reduction and relaxation technique that helps lead to healing and well-being. Healing from the inside out, Spirt, Mind, & Body.
 
 #reiki-crystal 
-    | Reiki combined with crystals placed intuitively on the body and/or under the massage table to bring balance and healing Healing from the inside out Mind, Body & Spirit.
+    | Reiki combined with crystals placed intuitively on the body and/or under the massage table to bring balance and healing Healing from the inside out Spirt, Mind, & Body.
 
 #swedish 
     | Relaxation and tension relief using light to medium pressure. Ease and soothe muscle aches and pains, boost circulation, relieve stress
